# BinauralSpatialMixer

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
BinauralMix/: BinuaralMix.jucer
BinauralMix/Builds/MacOSX/: Info-AU.plist  Info-Standalone_Plugin.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist  appUI 2.html  appUI.html
BinauralMix/Builds/MacOSX/BinuaralMix.xcodeproj/: project.pbxproj
BinauralMix/JuceLibraryCode/: BinaryData.h  JuceHeader.h  JucePluginDefines.h
BinauralMix/Resources/: appUI.html
BinauralMix/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedObjectAudioTransport.h
BinauralMix/libmysofa/: .gitignore
BinauralMix/libmysofa/src/: config.h
BinauralMix/libmysofa/src/hrtf/: mysofa_export.h
BinauralSender/: BinuaralSender.jucer  README.md
BinauralSender/Builds/MacOSX/: Info-AU.plist  Info-VST3.plist  Info-VST3_Manifest_Helper.plist
BinauralSender/Builds/MacOSX/BinuaralSender.xcodeproj/: project.pbxproj
BinauralSender/JuceLibraryCode/: JuceHeader.h  JucePluginDefines.h
BinauralSender/Source/: PluginEditor.cpp  PluginEditor.h  PluginProcessor.cpp  PluginProcessor.h  SharedObjectAudioTransport.h
